--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,22 +2,22 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: David Jorge
     - name: Date of Birth
-      value: 14th March 1879
+      value: 12th October 1999
     - name: Languages
-      value: English, German
+      value: English, Portuguese
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Integrated Masters in Electronics and Computer Science (MEng Hons)
+      institution: University of Edinburgh, Edinburgh, UK
+      year: 2017-2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - <b>Results:</b> First Class (1:1) with Honours [<a href="https://drive.google.com/file/d/1esjobZPDUT7oVnymn0YQAqLcbJox4Q0A/view?usp=sharing">transcript</a>].
+        - <b>Master's Dissertation:</b>
+        - title: <b>Awards:</b>.
           contents:
             - Sub-description 1.
             - Sub-description 2.
