--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
 
 contact_note: >
-  Feel free to reach out to me on any of the above :).
+  Feel free to reach out to me on any of the above :)
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
